fix z-index issues form banner section and finilize the landing page

--- a/style/style.css
+++ b/style/style.css
@@ -664,11 +664,11 @@ letter-spacing: 0%
 #block-1{
 margin: 10px;
 }
- .section-2{
+ /* .section-2{
     margin-top: -115px;
     z-index: 1;
     position: absolute;
- }
+ } */
     .model{
         display: flex;
         flex-wrap: wrap;
@@ -679,7 +679,10 @@ margin: 10px;
         flex-direction: column;
         align-items: center;
         text-align: center;
-        gap:px;
+        gap:5px;
+        background: #000000;
+        margin-top: -120px;
+        position: relative;
        
     }
       
